--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,10 +5,119 @@
 }
 /*Responsive Typography Sizes*/
 /* Colors */
+/* Dark Theme*/
+/* Light Theme*/
+.card {
+  backdrop-filter: blur(5px);
+  padding: 2.5rem;
+  border-radius: 0.5rem;
+  margin: 1rem;
+  transition: box-shadow 1s;
+}
+.card.dark {
+  background-color: rgba(91, 91, 93, 0.6);
+}
+.card.dark:hover {
+  box-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #ee2e31, 0 0 20px #ee2e31, 0 0 25px #ee2e31, 0 0 30px #ee2e31, 0 0 35px #ee2e31;
+}
+.card.light {
+  background-color: rgba(246, 237, 203, 0.6);
+}
+.card.light:hover {
+  box-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #429cf0, 0 0 20px #429cf0, 0 0 25px #429cf0, 0 0 30px #429cf0, 0 0 35px #429cf0;
+}
+
+.card-image-container {
+  display: flex;
+  justify-content: center;
+}
+
+img.medium {
+  width: 384px;
+  height: 577px;
+  object-fit: contain;
+}
+
+.card-body {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  margin-top: 1.5rem;
+  gap: 0.5rem;
+}
+.card-body.dark {
+  color: #fff;
+}
+.card-body p:first-child {
+  font-size: clamp(1.25rem, 10vw + 1rem, 2rem);
+}
+.card-body p {
+  font-size: clamp(1rem, 10vw + 1rem, 1.5rem);
+}
+
+/*BUTTONS*/
+button {
+  cursor: pointer;
+  border-radius: 0.5rem;
+  color: #fff;
+  border: 1px solid #fff;
+  transition: transform 50ms;
+}
+button.dark {
+  background-color: #2d2d2d;
+}
+button.light {
+  background-color: #51422a;
+}
+button:active {
+  transform: scale(0.96);
+}
+
+.primary {
+  width: 50%;
+  max-width: 400px;
+  height: 3rem;
+  margin: 0.5rem;
+  align-self: center;
+  font-size: clamp(1rem, 10vw + 1rem, 1.5rem);
+  transition: box-shadow 1s, text-shadow 1s;
+}
+.primary.medium-btn:hover {
+  color: #ffe81f;
+  border: 1px solid #ffe81f;
+}
+.primary.large-btn.dark:hover {
+  box-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #ee2e31, 0 0 20px #ee2e31, 0 0 25px #ee2e31, 0 0 30px #ee2e31, 0 0 35px #ee2e31;
+  text-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #ee2e31, 0 0 20px #ee2e31, 0 0 25px #ee2e31, 0 0 30px #ee2e31, 0 0 35px #ee2e31;
+}
+.primary.large-btn.light:hover {
+  box-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #429cf0, 0 0 20px #429cf0, 0 0 25px #429cf0, 0 0 30px #429cf0, 0 0 35px #429cf0;
+  text-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #429cf0, 0 0 20px #429cf0, 0 0 25px #429cf0, 0 0 30px #429cf0, 0 0 35px #429cf0;
+}
+
+.small-btn {
+  margin: 1rem;
+  width: 4rem;
+  height: 2.5rem;
+  font-size: clamp(1rem, 10vw + 1rem, 1.5rem);
+  transition: box-shadow 150ms, text-shadow 150ms;
+}
+.small-btn.dark:hover {
+  box-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #ee2e31, 0 0 20px #ee2e31, 0 0 25px #ee2e31, 0 0 30px #ee2e31, 0 0 35px #ee2e31;
+  text-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #ee2e31, 0 0 20px #ee2e31, 0 0 25px #ee2e31, 0 0 30px #ee2e31, 0 0 35px #ee2e31;
+}
+.small-btn.light:hover {
+  box-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #429cf0, 0 0 20px #429cf0, 0 0 25px #429cf0, 0 0 30px #429cf0, 0 0 35px #429cf0;
+  text-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #429cf0, 0 0 20px #429cf0, 0 0 25px #429cf0, 0 0 30px #429cf0, 0 0 35px #429cf0;
+}
+
 /* MODAL STYLES*/
 .modal-container {
   position: fixed;
   top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(91, 91, 93, 0.6);
@@ -28,7 +137,15 @@
   align-items: center;
 }
 
-.modal-content {
+.animation-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.animation-content {
   display: flex;
   max-height: 1000px;
   max-width: 1000px;
@@ -66,7 +183,7 @@
   top: 45%;
   font-size: clamp(1rem, 10vw + 1rem, 1.5rem);
   text-align: center;
-  color: aqua;
+  color: #17a7b7;
   visibility: hidden;
   opacity: 0;
 }
@@ -131,22 +248,6 @@
   animation: showText 3s linear 67s forwards;
 }
 
-footer {
-  grid-area: footer;
-  font-size: clamp(1.25rem, 10vw + 1rem, 2rem);
-  color: #fff;
-  text-align: center;
-}
-
-@media only screen and (max-width: 795px) {
-  header {
-    flex-direction: column;
-  }
-
-  .crawl {
-    font-size: clamp(1.25rem, 10vw + 1rem, 2rem);
-  }
-}
 @keyframes showIntro {
   0% {
     visibility: hidden;
@@ -198,6 +299,39 @@ footer {
     opacity: 1;
   }
 }
+.switch span {
+  position: relative;
+  width: 50px;
+  height: 26px;
+  border-radius: 15px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.4);
+  background: var(--gray);
+  transition: all 0.3s;
+}
+.switch span::before {
+  content: "";
+  position: absolute;
+  left: 1px;
+  top: 1px;
+  width: 24px;
+  height: 24px;
+  background: var(--white);
+  border-radius: 50%;
+  z-index: 1;
+  transition: transform 0.3s;
+}
+.switch span::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 8px;
+  width: 12px;
+  height: 12px;
+  transform: translateY(-50%);
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/uncheck-switcher.svg);
+  background-size: 12px 12px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -230,9 +364,9 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-areas: "header" "theme" "main" "footer";
+  grid-template-areas: "header" "theme-toggle" "main" "footer";
   grid-template-columns: 1fr;
-  grid-template-rows: auto 3rem 1fr 5rem;
+  grid-template-rows: auto 2.5rem 1fr 5rem;
   height: 100%;
 }
 
@@ -249,7 +383,6 @@ body {
   font-family: "Jedi";
   font-size: clamp(4rem, 12vw + 1rem, 5.5rem);
   color: #fff;
-  text-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #ee2e31, 0 0 20px #ee2e31, 0 0 25px #ee2e31, 0 0 30px #ee2e31, 0 0 35px #ee2e31;
 }
 .top-row h2 {
   font-size: clamp(3rem, 12vw + 1rem, 4.5rem);
@@ -258,94 +391,61 @@ body {
 .top-row .logo {
   max-width: 80px;
 }
+.top-row.dark h1 {
+  text-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #ee2e31, 0 0 20px #ee2e31, 0 0 25px #ee2e31, 0 0 30px #ee2e31, 0 0 35px #ee2e31;
+}
+.top-row.light h1 {
+  text-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #429cf0, 0 0 20px #429cf0, 0 0 25px #429cf0, 0 0 30px #429cf0, 0 0 35px #429cf0;
+}
 
-.theme {
-  grid-area: theme;
+.theme-toggle {
+  grid-area: theme-toggle;
+  display: flex;
 }
 
 main {
   grid-area: main;
   padding: 2rem;
+}
+
+.loading {
   color: #fff;
+  font-size: clamp(1.25rem, 10vw + 1rem, 2rem);
 }
 
 .middle-row {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.movies-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
 
-.card {
-  background-color: rgba(91, 91, 93, 0.2);
-  backdrop-filter: blur(5px);
-  padding: 2.5rem;
-  border-radius: 0.5rem;
+.add-new-movie {
   margin: 1rem;
-  transition: box-shadow 1s;
-}
-.card:hover {
-  box-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #ee2e31, 0 0 20px #ee2e31, 0 0 25px #ee2e31, 0 0 30px #ee2e31, 0 0 35px #ee2e31;
-}
-
-.card-image-container {
   display: flex;
   justify-content: center;
 }
 
-img.medium {
-  width: 384px;
-  height: 577px;
-  object-fit: contain;
-}
-
-.card-body {
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
-  margin-top: 1.5rem;
-  gap: 0.5rem;
-}
-.card-body p:first-child {
+footer {
+  grid-area: footer;
   font-size: clamp(1.25rem, 10vw + 1rem, 2rem);
-}
-.card-body p {
-  font-size: clamp(1rem, 10vw + 1rem, 1.5rem);
-}
-
-/*BUTTONS*/
-button {
-  background-color: #2d2d2d;
   color: #fff;
-  cursor: pointer;
-  border-radius: 0.5rem;
-  border: 1px solid #fff;
+  text-align: center;
 }
 
-.primary-btn {
-  width: 50%;
-  height: 3rem;
-  margin: 0.5rem;
-  align-self: center;
-  font-size: clamp(1rem, 10vw + 1rem, 1.5rem);
-}
-.primary-btn:hover {
-  color: #ffe81f;
-  border: 1px solid #ffe81f;
-}
+@media only screen and (max-width: 795px) {
+  header {
+    flex-direction: column;
+  }
 
-.small-btn {
-  margin: 1rem;
-  width: 4rem;
-  height: 2.5rem;
-  font-size: clamp(1rem, 10vw + 1rem, 1.5rem);
-  transition: box-shadow 100ms, text-shadow 100ms, transform 50ms;
-}
-.small-btn:hover {
-  box-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #ee2e31, 0 0 20px #ee2e31, 0 0 25px #ee2e31, 0 0 30px #ee2e31, 0 0 35px #ee2e31;
-  text-shadow: 0 0 3px #fff, 0 0 6px #fff, 0 0 9px #fff, 0 0 12px #ee2e31, 0 0 20px #ee2e31, 0 0 25px #ee2e31, 0 0 30px #ee2e31, 0 0 35px #ee2e31;
-}
-.small-btn:active {
-  transform: scale(0.96);
+  .crawl {
+    font-size: clamp(1.25rem, 10vw + 1rem, 2rem);
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
