--- a/src/styles/sass/_mixins.scss
+++ b/src/styles/sass/_mixins.scss
@@ -33,6 +33,6 @@
   ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    background-color: vars.$clr-smokeglass;
+    background-color: vars.$clr-grayglass;
   }
 }
