--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1,6 +1,10 @@
 @use "vars";
 @use "mixins";
+@use "cards";
+@use "buttons";
 @use "modal";
+@use "animation";
+@use "toggle";
 
 * {
   margin: 0;
@@ -19,9 +23,9 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-areas: "header" "theme" "main" "footer";
+  grid-template-areas: "header" "theme-toggle" "main" "footer";
   grid-template-columns: 1fr;
-  grid-template-rows: auto 3rem 1fr 5rem;
+  grid-template-rows: auto 2.5rem 1fr 5rem;
   height: 100%;
 }
 
@@ -38,7 +42,6 @@ body {
     font-family: vars.$ff-highlight;
     font-size: vars.$fs-xxl;
     color: vars.$clr-white;
-    @include mixins.neonText(vars.$clr-sith);
   }
 
   & h2 {
@@ -49,99 +52,62 @@ body {
   & .logo {
     max-width: 80px;
   }
+
+  &.dark h1 {
+    @include mixins.neonText(vars.$clr-sith);
+  }
+
+  &.light h1 {
+    @include mixins.neonText(vars.$clr-jedi);
+  }
 }
 
-.theme {
-  grid-area: theme;
+.theme-toggle {
+  grid-area: theme-toggle;
+  display: flex;
 }
 
 main {
   grid-area: main;
   padding: 2rem;
-  color: vars.$clr-white;
+}
+
+.loading {
+  color: #fff;
+  font-size: vars.$fs-m;
 }
 
 .middle-row {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.movies-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
 
-.card {
-  background-color: vars.$clr-grayglass;
-  backdrop-filter: blur(5px);
-  padding: 2.5rem;
-  border-radius: 0.5rem;
+.add-new-movie {
   margin: 1rem;
-  transition: box-shadow 1s;
-
-  &:hover {
-    @include mixins.neonBorder(vars.$clr-sith);
-  }
-}
-.card-image-container {
   display: flex;
   justify-content: center;
 }
 
-img.medium {
-  width: 384px;
-  height: 577px;
-  object-fit: contain;
-}
-
-.card-body {
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
-  margin-top: 1.5rem;
-  gap: 0.5rem;
-
-  & p:first-child {
-    font-size: vars.$fs-m;
-  }
-
-  & p {
-    font-size: vars.$fs-s;
-  }
-}
-
-/*BUTTONS*/
-
-button {
-  background-color: vars.$clr-darkgray;
+footer {
+  grid-area: footer;
+  font-size: vars.$fs-m;
   color: vars.$clr-white;
-  cursor: pointer;
-  border-radius: 0.5rem;
-  border: 1px solid vars.$clr-white;
+  text-align: center;
 }
 
-.primary-btn {
-  width: 50%;
-  height: 3rem;
-  margin: 0.5rem;
-  align-self: center;
-  font-size: vars.$fs-s;
-
-  &:hover {
-    color: vars.$clr-gold;
-    border: 1px solid vars.$clr-gold;
-  }
-}
-
-.small-btn {
-  margin: 1rem;
-  width: 4rem;
-  height: 2.5rem;
-  font-size: vars.$fs-s;
-  transition: box-shadow 100ms, text-shadow 100ms, transform 50ms;
-
-  &:hover {
-    @include mixins.neonBorder(vars.$clr-sith);
-    @include mixins.neonText(vars.$clr-sith);
+@media only screen and (max-width: 795px) {
+  header {
+    flex-direction: column;
   }
 
-  &:active {
-    transform: scale(0.96);
+  .crawl {
+    font-size: vars.$fs-m;
   }
 }
