--- a/src/styles/sass/_animation.scss
+++ b/src/styles/sass/_animation.scss
@@ -6,10 +6,12 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+  width: 100%;
 }
 
 .animation-content {
   display: flex;
+  justify-content: center;
   max-height: 1000px;
   max-width: 1000px;
   height: 60%;
