--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -4,7 +4,7 @@
 @use "buttons";
 @use "modal";
 @use "animation";
-@use "toggle";
+@use "form";
 
 * {
   margin: 0;
@@ -19,14 +19,27 @@ html {
 body {
   background-image: url("../assets/images/star-wars-background.jpg");
   font-family: vars.$ff-document;
+  color: vars.$clr-white;
 }
 
 .grid-container {
   display: grid;
-  grid-template-areas: "header" "theme-toggle" "main" "footer";
+  grid-template-areas: "theme-toggle" "header" "main" "footer";
   grid-template-columns: 1fr;
-  grid-template-rows: auto 2.5rem 1fr 5rem;
+  grid-template-rows: 2.5rem auto 1fr 5rem;
   height: 100%;
+}
+
+.theme-toggle {
+  grid-area: theme-toggle;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  padding: 1rem;
+
+  & > label {
+    margin-right: 5px;
+  }
 }
 
 .top-row {
@@ -50,7 +63,9 @@ body {
   }
 
   & .logo {
-    max-width: 80px;
+    width: 64px;
+    max-height: 64px;
+    object-fit: contain;
   }
 
   &.dark h1 {
@@ -60,11 +75,6 @@ body {
   &.light h1 {
     @include mixins.neonText(vars.$clr-jedi);
   }
-}
-
-.theme-toggle {
-  grid-area: theme-toggle;
-  display: flex;
 }
 
 main {
