--- a/src/styles/sass/_vars.scss
+++ b/src/styles/sass/_vars.scss
@@ -21,10 +21,11 @@ $clr-intro: #17a7b7;
 
 /* Dark Theme*/
 $clr-grayglass: rgba(91, 91, 93, 0.6);
+$clr-smokeglass: rgba(40, 40, 41, 0.8);
 $clr-darkgray: #2d2d2d;
 $clr-sith: #ee2e31;
 
 /* Light Theme*/
 $clr-paleglass: rgba(246, 237, 203, 0.6);
-$clr-darkyellow: #51422a;
+$clr-brown: #51422a;
 $clr-jedi: #429cf0;
