--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -81,8 +81,6 @@ button:active {
   width: 100%;
   max-width: 400px;
   height: 3rem;
-  margin: 0.5rem;
-  align-self: center;
   font-size: clamp(1rem, 10vw + 1rem, 1.5rem);
   transition: box-shadow 1s, text-shadow 1s;
 }
@@ -466,15 +464,37 @@ button:active {
   justify-content: flex-start;
   height: 100%;
   gap: 2rem;
+  font-weight: bold;
 }
 
 .add-movie-form {
   width: 100%;
-  max-width: 1000px;
+  max-width: 1024px;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 1rem;
+  gap: 0.75rem;
+  border-radius: 5px;
+}
+.add-movie-form.dark {
+  background-color: rgba(40, 40, 41, 0.8);
+}
+.add-movie-form.light {
+  background-color: rgba(246, 237, 203, 0.6);
+  color: #2d2d2d;
+}
+.add-movie-form > div:last-child {
+  margin-top: 0.5rem;
+}
+
+input:focus {
+  outline: none;
+}
+input#episode_id {
+  width: 30%;
+}
+input#title, input#director, input#producer {
+  width: 100%;
 }
 
 * {
